[gd_scene load_steps=3 format=3 uid="uid://bs1eip3jtnoyk"]

[ext_resource type="FontFile" uid="uid://y2fv3f1jprtd" path="res://assets/fonts/bb.ttf" id="1_ikejd"]
[ext_resource type="Script" path="res://scripts/menus/settings_menu.gd" id="1_oyrka"]

[node name="settings_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_oyrka")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 702.0
offset_top = 105.0
offset_right = 1132.0
offset_bottom = 950.0
color = Color(0.345098, 0.345098, 0.345098, 1)

[node name="show_background_checkbutton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 787.0
offset_top = 733.0
offset_right = 1081.0
offset_bottom = 798.0
theme_override_font_sizes/font_size = 24
text = "Show 3D Background"

[node name="ball_physics_checkbutton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 785.0
offset_top = 779.0
offset_right = 1079.0
offset_bottom = 844.0
theme_override_font_sizes/font_size = 24
text = "Realistic Ball Physics"

[node name="settings_label" type="Label" parent="."]
layout_mode = 0
offset_left = 798.0
offset_top = 609.0
offset_right = 1057.0
offset_bottom = 704.0
theme_override_fonts/font = ExtResource("1_ikejd")
theme_override_font_sizes/font_size = 80
text = "Settings"

[node name="title_label" type="Label" parent="."]
layout_mode = 0
offset_left = 733.0
offset_top = 115.0
offset_right = 1120.0
offset_bottom = 596.0
theme_override_colors/font_color = Color(0.666667, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ikejd")
theme_override_font_sizes/font_size = 100
text = "PADDLES
BALLS
BLOCKS 
and WALLS!"
horizontal_alignment = 1

[node name="back_button" type="Button" parent="."]
layout_mode = 0
offset_left = 895.0
offset_top = 895.0
offset_right = 940.0
offset_bottom = 926.0
text = "Back"

[node name="reset_times_button" type="Button" parent="."]
layout_mode = 0
offset_left = 842.0
offset_top = 855.0
offset_right = 1001.0
offset_bottom = 886.0
text = "Reset Record Times"

[node name="cancel_button" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 852.0
offset_top = 745.0
offset_right = 1011.0
offset_bottom = 776.0
text = "Cancel"

[connection signal="toggled" from="show_background_checkbutton" to="." method="_on_show_background_checkbutton_toggled"]
[connection signal="toggled" from="ball_physics_checkbutton" to="." method="_on_ball_physics_checkbutton_toggled"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="reset_times_button" to="." method="_on_reset_times_button_pressed"]
[connection signal="pressed" from="cancel_button" to="." method="_on_cancel_button_pressed"]
